--- a/src/app/view/consumoapi/consumoapi.component.html
+++ b/src/app/view/consumoapi/consumoapi.component.html
@@ -1,3 +1,6 @@
+<app-carrusel></app-carrusel>
+
+
 <div class="container">
     <h1>Estos son los paises registrados en nuestra base de datos</h1>
     <table class="table">
@@ -15,3 +18,6 @@
         </tbody>
     </table>
 </div>
+
+
+
