--- a/src/app/components/carrusel/carrusel.component.html
+++ b/src/app/components/carrusel/carrusel.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="...">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.lavanguardia.com%2Focio%2Fviajes%2F20170516%2F422602355018%2Flo-que-debes-saber-antes-coliseo-roma.html&psig=AOvVaw30BGObhQ162NnPTRgJKFqo&ust=1729983764709000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjU6-_RqokDFQAAAAAdAAAAABAY" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="https://via.placeholder.com/800x400" class="d-block w-100" alt="...">
