--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a routerLink="/paises" class="nav-link" href="#"></a>
+              <a routerLink="/paises" class="nav-link" href="#">1</a>
             </li>
             <li class="nav-item">
               <a routerLink="/directivas" class="nav-link" href="#">Directivas</a>
             </li>
             <li class="nav-item">
-              <a routerLink="/consumoapi" class="nav-link" href="#"></a>
+              <a routerLink="/consumoapi" class="nav-link" href="#">2</a>
             </li>
             <li class="nav-item">
-              <a routerLink="/" class="nav-link" href="#"></a>
+              <a routerLink="/" class="nav-link" href="#">3</a>
             </li>
           </ul>
         </div>
